# backend

./: .gitignore  LICENSE  Makefile  README.md  config.ini  libro-backend.cabal
.github/workflows/: haddock-pages.yml  haskell-ci.yml  test.yml
app/: Main.hs
lib/: Answer.hs  LiBro.hs
lib/LiBro/: Base.hs  Config.hs  Control.hs  Data.hs  Util.hs  WebService.hs
lib/LiBro/Data/: SafeText.hs  Storage.hs
lib/LiBro/WebService/: API.hs  Server.hs  State.hs  Types.hs
libreoffice-files/: empty.ods
server/: Main.hs
test/: AnswerSpec.hs  LiBroSpec.hs  run-all-tests.hs
test/LiBro/: ConfigSpec.hs  ControlSpec.hs  DataSpec.hs  TestUtil.hs  TestUtilSpec.hs  UtilSpec.hs  WebServiceSpec.hs
test/LiBro/Data/: SafeTextSpec.hs  StorageSpec.hs
test/storage-files/: simple.xlsx  tasks.xlsx
test/storage-files/data/: persons.xlsx  tasks.xlsx
