cabal-version:        3.0
name:                 libro-backend
version:              0.1.0.0
homepage:             https://github.com/libro-app
license:              MIT
license-file:         LICENSE
author:               Mirko Westermeier
maintainer:           mirko@westermeier.de

extra-source-files:   test/storage-files/*.xlsx
                    , test/storage-files/data/*.xlsx

common warnings
  ghc-options:        -Wall

library
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , DeriveGeneric
  exposed-modules:    LiBro.Config
                    , LiBro.Data
                    , LiBro.Data.Storage
                    , LiBro.Data.SafeText
                    , LiBro.Util
  build-depends:      base >=4.14.0.0
                    , aeson
                    , attoparsec
                    , bytestring
                    , cassava
                    , config-ini
                    , containers
                    , data-default
                    , directory
                    , filepath
                    , mtl
                    , process
                    , QuickCheck
                    , quickcheck-text
                    , temporary
                    , text
                    , vector
  hs-source-dirs:     lib

executable libro-backend
  default-language:   Haskell2010
  main-is:            Main.hs
  build-depends:      base >=4.14.0.0
                    , libro-backend
  hs-source-dirs:     app

test-suite libro-backend-test
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      LiBro.TestUtil
                    , LiBro.TestUtilSpec
                    , LiBro.ConfigSpec
                    , LiBro.DataSpec
                    , LiBro.Data.StorageSpec
                    , LiBro.Data.SafeTextSpec
                    , LiBro.UtilSpec
  main-is:            run-all-tests.hs
  build-depends:      base >=4.14.0.0
                    , hspec
                    , QuickCheck
                    , quickcheck-text
                    , generic-arbitrary
                    , libro-backend
                    , aeson
                    , bytestring
                    , cassava
                    , containers
                    , data-default
                    , filepath
                    , lens
                    , silently
                    , temporary
                    , text
                    , transformers
                    , vector
                    , xlsx
  build-tool-depends: hspec-discover:hspec-discover
