cabal-version:        3.0
name:                 libro-backend
version:              0.1.0.0
synopsis:             Restful data backend of the LiBro app
description:          Webservice data backend of the LiBro app using Excel sheets for data storage
category:             Webservice
homepage:             https://github.com/libro-app
bug-reports:          https://github.com/libro-app/backend/issues
license:              MIT
license-file:         LICENSE
author:               Mirko Westermeier
maintainer:           mirko@westermeier.de
copyright:            (c) 2023 Mirko Westermeier

source-repository head
  type:     git
  branch:   main
  location: git://github.com/libro-app/backend.git

common warnings
  ghc-options:        -Wall

extra-source-files:   test/storage-files/*.xlsx
                    , test/storage-files/data/*.xlsx

library
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , DeriveGeneric
  exposed-modules:    LiBro.Config
                    , LiBro.Data
                    , LiBro.Data.Storage
                    , LiBro.Data.SafeText
                    , LiBro.Control
                    , LiBro.Util
  build-depends:      base >=4.14.0.0
                    , aeson
                    , attoparsec
                    , bytestring
                    , cassava
                    , config-ini
                    , containers
                    , data-default
                    , directory
                    , filepath
                    , mtl
                    , process
                    , QuickCheck
                    , temporary
                    , text
                    , unordered-containers
                    , vector
  hs-source-dirs:     lib

executable libro-backend
  default-language:   Haskell2010
  main-is:            Main.hs
  build-depends:      base >=4.14.0.0
                    , libro-backend
  hs-source-dirs:     app

test-suite libro-backend-test
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , DeriveGeneric
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      LiBro.TestUtil
                    , LiBro.TestUtilSpec
                    , LiBro.ConfigSpec
                    , LiBro.DataSpec
                    , LiBro.Data.StorageSpec
                    , LiBro.Data.SafeTextSpec
                    , LiBro.ControlSpec
                    , LiBro.UtilSpec
  main-is:            run-all-tests.hs
  build-depends:      base >=4.14.0.0
                    , hspec
                    , QuickCheck
                    , quickcheck-text
                    , generic-arbitrary
                    , libro-backend
                    , aeson
                    , bytestring
                    , cassava
                    , containers
                    , data-default
                    , extra
                    , filepath
                    , lens
                    , silently
                    , temporary
                    , text
                    , transformers
                    , vector
                    , xlsx
  build-tool-depends: hspec-discover:hspec-discover
