cabal-version:        3.0
name:                 libro-backend
version:              0.1.0.0
synopsis:             Restful data backend of the LiBro app
description:          Webservice data backend of the LiBro app using Excel sheets for data storage
category:             Webservice
homepage:             https://github.com/libro-app
bug-reports:          https://github.com/libro-app/backend/issues
license:              MIT
license-file:         LICENSE
author:               Mirko Westermeier
maintainer:           mirko@westermeier.de
copyright:            (c) 2023 Mirko Westermeier

source-repository head
  type:     git
  branch:   main
  location: git://github.com/libro-app/backend.git

extra-source-files:   libreoffice-files/empty.ods
                    , test/storage-files/*.xlsx
                    , test/storage-files/data/*.xlsx

common basic
  default-language:   Haskell2010
  build-depends:      base >= 4.14.0.0
  ghc-options:        -Wall

common consumer
  import:             basic
  build-depends:      libro-backend

library
  import:             basic
  default-extensions: OverloadedStrings
                    , DeriveGeneric
                    , DataKinds
                    , TypeOperators
  exposed-modules:    LiBro.Config
                    , LiBro.Data
                    , LiBro.Data.Storage
                    , LiBro.Data.SafeText
                    , LiBro.Control
                    , LiBro.WebService
                    , LiBro.Util
  build-depends:      aeson
                    , attoparsec
                    , bytestring
                    , cassava
                    , config-ini
                    , containers
                    , data-default
                    , directory
                    , filepath
                    , ghc
                    , mtl
                    , process
                    , QuickCheck
                    , servant
                    , servant-server
                    , temporary
                    , text
                    , unordered-containers
                    , vector
  hs-source-dirs:     lib

executable libro-backend
  import:             consumer
  main-is:            Main.hs
  build-depends:      libro-backend
                    , warp
  hs-source-dirs:     server

test-suite libro-backend-test
  import:             consumer
  default-extensions: OverloadedStrings
                    , QuasiQuotes
                    , DeriveGeneric
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      LiBro.TestUtil
                    , LiBro.TestUtilSpec
                    , LiBro.ConfigSpec
                    , LiBro.DataSpec
                    , LiBro.Data.StorageSpec
                    , LiBro.Data.SafeTextSpec
                    , LiBro.ControlSpec
                    , LiBro.WebServiceSpec
                    , LiBro.UtilSpec
  main-is:            run-all-tests.hs
  build-depends:      libro-backend
                    , hspec
                    , hspec-wai
                    , hspec-wai-json
                    , QuickCheck
                    , quickcheck-text
                    , generic-arbitrary
                    , aeson
                    , bytestring
                    , cassava
                    , containers
                    , data-default
                    , extra
                    , filepath
                    , lens
                    , process
                    , silently
                    , temporary
                    , text
                    , transformers
                    , vector
                    , wai
